@@ -1,4 +1,5 @@
 0.36
+ - Update Module::Install to 1.15 version.
 
 0.35 2015-04-28T15:59:07+02:00
  - Update Map::Tube to 3.00 version.
